--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,8 +23,8 @@ jobs:
   # This workflow contains a single job called "greet"
   greet:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
+    runs-on: [self-hosted, Linux, ARM64]
+    
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Runs a single command using the runners shell
